--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
   <div class="main-container">
    <div class="content-wrapper">
      <div id="pdd-test"></div>
-	   <div id="pdd-statistics"></div>
    </div>
   </div>
  </div>
@@ -25,5 +24,20 @@
 <script src="//cdnjs.cloudflare.com/ajax/libs/require.js/2.1.16/require.js" data-main="./pdd2/pdd-test.min.js" id="pdd-test-script"></script>
 <!-- partial -->
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script><script  src="./pdd2/script.js"></script>
+	<!-- Yandex.Metrika counter -->
+<script type="text/javascript" >
+   (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+   m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+   (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+   ym(89837140, "init", {
+        clickmap:true,
+        trackLinks:true,
+        accurateTrackBounce:true,
+        webvisor:true
+   });
+</script>
+<noscript><div><img src="https://mc.yandex.ru/watch/89837140" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+<!-- /Yandex.Metrika counter -->
 </body>
 </html>
